@@ -34,14 +34,5 @@ tasks {
   }
   withType<Test>().configureEach {
     jvmArgs("-Djava.rmi.server.hostname=127.0.0.1")
-
-    // Can only export on Java 9+
-    val testJavaVersion =
-      gradle.startParameter.projectProperties.get("testJavaVersion")?.let(JavaVersion::toVersion)
-        ?: JavaVersion.current()
-    if (testJavaVersion.isJava9Compatible) {
-      jvmArgs("--add-exports=java.rmi/sun.rmi.server=ALL-UNNAMED")
-      jvmArgs("--add-exports=java.rmi/sun.rmi.transport=ALL-UNNAMED")
-    }
   }
 }
